fix alignment

--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -1,13 +1,12 @@
 #pokedex-left {
     min-width: 100px;
-    max-width: 200px;
+    max-width: 250px;
     height: inherit;
     float: left;
     text-align: center;
-    border-right: 1px solid black;
     overflow: hidden;
     overflow-y: scroll;
-    margin-left: 15px;
+    margin: 0px 5px 0px 0px;
 }
 
 #pokedex-left::-webkit-scrollbar { 
@@ -16,8 +15,7 @@
 
 #pokedex-right {
     min-width: 50%;
-    float: right;
-    text-align: left;
+    float: left;
     border-left: 1px solid black;
     overflow: auto;
 }
